--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <a href="#" class="logo">CLASH OF CLANS</a>
 
         <ul class="navlist">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Sobre</a></li>
             <li><a href="#">Clans</a></li>
             <li><a href="#">Town hall</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
     <section class="hero">
         <div class="hero-text">
-            <h5>#2 Trending</h5>
-            <h4>Lead Supercell</h4>
+            <h5>#2 Em Alta</h5>
+            <h4>Supercell</h4>
             <h1>REI BÁRBARO</h1>
-            <p>Join millions of players worlwide as you build your village, <br> raise a clan, and compete in epic clan wars!!</p>
-            <a href="#">Compare</a>
-            <a href="#" class="ctaa"><i class="ri-play-fill"></i>Watch Gameplay</a>
+            <p>Junte-se a milhões de jogadores em todo o mundo enquanto constrói sua vila, <br> crie um clã e participe de guerras de clãs épicas!!</p>
+            <a href="#">Jogar</a>
+            <a href="#" class="ctaa"><i class="ri-play-fill"></i>Assistir ao jogo</a>
         </div>
         <div class="hero-img">
             <img src="clash-of-clans.png">
